# code-furnace

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README-Logo.md  README.md  package-lock.json  package.json
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs  memory.rs  specialized.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: lib.rs
crates/editor/: Cargo 2.toml  Cargo.toml
crates/editor/src/: lib.rs  lsp.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: api.rs  lib.rs
crates/terminal/: Cargo 2.toml  Cargo.toml
crates/terminal/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/workspace/: Cargo 2.toml  Cargo.toml
crates/workspace/src/: git.rs  lib.rs
crates/workspace/src/git/: gitea.rs  github.rs  gitlab.rs
scripts/: generate-icons.py  simple-icon-gen.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
