[workspace]
members = [
    "src-tauri",
    "crates/agents",
    "crates/terminal",
    "crates/editor",
    "crates/canvas",
    "crates/events",
    "crates/workspace",
    "crates/plugins",
    "crates/utils"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# WASM runtime for plugins
wasmtime = "30.0"

# Time
chrono = { version = "0.4", features = ["serde"] }