[package]
name = "code-furnace-plugins"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }
uuid = { workspace = true }

# Additional dependencies for enhanced plugin system
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }

# Local dependencies
code-furnace-events = { path = "../events" }
code-furnace-utils = { path = "../utils" }