[package]
name = "code-furnace-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Local dependencies
code-furnace-events = { path = "../events" }
code-furnace-utils = { path = "../utils" }

# Terminal-specific dependencies
pty-process = "0.4"
nix = "0.29"